--- a/pages/index.css
+++ b/pages/index.css
@@ -1,13 +1,18 @@
 /* RESET */
-
-html, body {
-  height: 100%;
+@font-face {
+  font-family: 'Lato';
+  src: url('/fonts/font-child/Lato/Lato-Regular.ttf');
+  font-weight: normal;
+  font-style: normal;
 }
+
 
 body {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
+  font-family: 'Lato', sans-serif !important;
+  height: 100%;
 }
 
 footer {
@@ -25,7 +30,7 @@ footer {
 /* ------- DEFAULT = MOBILE FIRST ------- */
 /* ↓ Tampilan HP dipakai di ukuran kecil */
 body {
-  font-family: Arial, sans-serif;
+  font-family: Lato, sans-serif;
   background-color: #f2f2f2;
 }
 
