--- a/pages/index.css
+++ b/pages/index.css
@@ -30,7 +30,7 @@ footer {
 /* ------- DEFAULT = MOBILE FIRST ------- */
 /* ↓ Tampilan HP dipakai di ukuran kecil */
 body {
-  font-family: Lato, sans-serif;
+  font-family: 'Lato', sans-serif;
   background-color: #f2f2f2;
 }
 
