--- a/pages/index.css
+++ b/pages/index.css
@@ -14,6 +14,14 @@ body {
   height: 100%;
 }
 
+  .left-right-box{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+  }
+
 footer {
   margin-top: auto;
   width: 100%;
@@ -24,6 +32,17 @@ footer {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+footer p,
+footer li {
+  text-decoration: none;
+  font-size: 1em;
+}
+
+footer li a {
+  text-decoration: none;
+  color: white;
 }
 
 /* ------- DEFAULT = MOBILE FIRST ------- */
@@ -102,11 +121,17 @@ body {
   object-fit: cover;
 }
 
+.box3 img {
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
+  }
+
 /* Footer mobile */
 .footer-content {
   background: #8585ff;
   color: white;
-  padding: 20px;
+  padding: 10px;
   display: flex;
   flex-direction: column;
   gap: 20px;
@@ -137,6 +162,12 @@ body {
     width: 40%;
     height: 100%;
     object-fit: cover;
+  }
+
+  .box3 img {
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
   }
  
   .box2 {
@@ -191,7 +222,8 @@ body {
   }
 
   .box-container {
-    flex-direction: row;
+    flex-direction: column;
+    align-items: center;
     justify-content: center;
     padding: 40px;
     gap: 30px;
@@ -217,9 +249,19 @@ body {
     height: 100%;
   }
 
+   .box3 img {
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
+  }
+
+
   .box2 {
-    width: 300px;
-    height: 300px;
+    width: 25%;
+  }
+
+  .box3{
+    width: 25%;
   }
 
   .box1:hover,
@@ -231,7 +273,7 @@ body {
 
   .footer-content {
     flex-direction: row;
-    padding: 30px 20px;
+    padding: 10px 20px;
   }
 }
 
