--- a/pages/myproject.css
+++ b/pages/myproject.css
@@ -1,7 +1,13 @@
+main-grid {
+  align-items: center;
+  justify-content: center;
+}
+
 /* Container grid */
 .info-grid {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+  margin: 0 auto; 
   gap: 20px;
   padding: 20px;
 }
